<resources>

    <string name="apps_link" translatable="false">http://url.app/store.php</string>

    <string name="app_name">AllergyIAP</string>
    <string name="about_login">You need to login to receive notifications</string>
    <string name="menu_login">Login</string>
    <string name="menu_signup">SignUp</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_level">Level</string>
    <string name="menu_product">Products</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_allergy">My Allergies</string>

    <string name="product_catalog_name">Product Catalog</string>
    <string name="btn_restart">Active this station</string>

    <string name="product_tab_about">About</string>
    <string name="product_tab_wherebuy">Where buy?</string>

    <string name="allergy_tab_about">About</string>
    <string name="allergy_tab_products">Products</string>

    <string name="main_error_googleplay_title">Device not supported</string>
    <string name="main_error_googleplay_message">Your version of Android does not seem to support the GooglePlay services package.</string>

    <!-- Activity my alarms -->
    <string name="days">Days of week</string>
    <string name="hour">Hour</string>
    <string name="allergy">Allergies</string>

    <string name="group_legend">Legend</string>
    <string name="group_information">Legal Information</string>
    <string name="group_about">About this App</string>
    <string name="group_allergy_about">Description</string>

    <string name="text_legend_1">Null</string>
    <string name="text_legend_2">Low</string>
    <string name="text_legend_3">Medium</string>
    <string name="text_legend_4">High</string>
    <string name="text_legend_5">Max</string>
    <string name="text_legend_6">Increase</string>
    <string name="text_legend_7">Stable</string>
    <string name="text_legend_8">Decrease</string>
    <string name="text_legend_9">Attention</string>
    <string name="text_legend">Legend</string>
    <string name="text_information"><![CDATA[All data related with allergies is extracted from Aerobiology information of CATALONIA (Xarxa Aerobiològica de Catalunya, XAC). The data are published and disseminated for the purpose of reporting the current state and future prediction of allergenic pollen levels.
Forbidden the reproduction total or partial of this data without authorization. More information: http://lap.uab.cat/aerobiologia/es/
]]></string>
    <string name="text_about"><![CDATA[This application has been developed as a project of the University of Lleida by 5 students of Master in Computer Engineering: Luiz Fernando Jacção, Meritxell Jordana Gavieiro, Muhammad Mirza Fahmi, Jose David Nunes de Oliveira and Carolina Romeu Farré
]]></string>

    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>


    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="menu_signin">Log In</string>
    <string name="terms">I accept the terms</string>

    <string name="navigation_drawer_open"></string>
    <string name="navigation_drawer_close"></string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_hour">Hour</string>

    <string name="pref_title_daysweek">Days of week</string>
    <string name="pref_summary_daysweek">Days that the notification will working</string>

    <string-array name="pref_sync_daysweek_titles">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="pref_sync_daysweek_values">
        <item>7</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Receive </string>
    <string name="pref_summary_new_message_notifications">Notifications of new allergies</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_my_allergies">My Allergies</string>
    <string name="title_activity_location">Stations</string>
    <string name="title_activity_help">Help</string>

    <string name="prefs_app_category">App</string>
    <string name="prefs_app_share">Share de app</string>
    <string name="prefs_app_share_description" formatted="false">Click to send the download link</string>

    <string name="group_medicament">Drugs</string>
    <string name="map_name">Allergy Map</string>


    <!-- Compartir app -->

    <!-- args: app_name -->
    <string name="mail_share_app_subject" formatted="false">¡Download %s!</string>
    <!-- args: app_name, android_link, iphone_link -->
    <string name="mail_share_app_body" formatted="false">Hi,\n\n¡Download the app in %s!\n\n. To Android or iPhone: %s</string>

    <string name="share_dialog_title">Share</string>

    <string name="progress_dialog_message">Wait, updating data!</string>
    <string name="title_activity_location_map">Map</string>
    <string name="title_activity_terms">Terms</string>
    <string name="text_terms">Terms and Conditions\nLast updated: 16/01/2017\n\nPlease read these Terms and Conditions carefully before using the Allergy IAP mobile application operated by Allergy IAP Group. Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to a registered users. By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.\n\nLinks To Other Web Sites\nOur Service may contain links to third-­party web sites or services that are not owned or controlled by Allergy IAP Group. Allergy IAP Group has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that Allergy IAP Group shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.\n\nChanges\nWe reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will try to provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.\n\nContact Us\nIf you have any questions about these Terms, please contact us.\nallergyIAP@gmail.com</string>

</resources>
