<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Notifications">

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs.notification.enabled"
            android:summary="@string/pref_summary_new_message_notifications"
            android:title="@string/pref_title_new_message_notifications" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="prefs.notification.enabled"
            android:key="prefs.notification.sound"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="prefs.notification.enabled"
            android:key="prefs.notification.vibration"
            android:title="@string/pref_title_vibrate" />

        <MultiSelectListPreference
            android:dependency="prefs.notification.enabled"
            android:entries="@array/pref_sync_daysweek_titles"
            android:entryValues="@array/pref_sync_daysweek_values"
            android:key="prefs.notification.days_week"
            android:dialogTitle="@string/pref_title_daysweek"
            android:title="@string/pref_title_daysweek"
            android:summary="@string/pref_summary_daysweek"/>

        <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
             design guidelines. -->
        <!--Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference-->

        <com.allergyiap.utils.TimePreference
            android:dependency="prefs.notification.enabled"
            android:key="time_alarm"
            android:title="@string/pref_title_hour"/>

    </PreferenceCategory>

    <!-- APP -->

    <PreferenceCategory android:title="@string/prefs_app_category">
        <!--
        <Preference
            android:key="prefs.app.desktop"
            android:title="@string/prefs_app_desktop" />
        -->
        <Preference
            android:key="prefs.app.share"
            android:summary="@string/prefs_app_share_description"
            android:title="@string/prefs_app_share" />
        <!--
        <Preference
            android:key="prefs.app.contact"
            android:title="@string/prefs_app_contact" />
        -->
    </PreferenceCategory>
</PreferenceScreen>
