<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp_1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:visible="false"
            android:title="Profile" />
        <item
            android:id="@+id/nav_level"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_level" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_allergy"
            android:icon="@drawable/ic_allergies"
            android:title="@string/menu_allergy" />

    </group>

    <group android:id="@+id/grp_2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />
    </group>

    <!--item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item-->

</menu>
