<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.allergyiap.activities.HelpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/cardview_default_elevation"
                card_view:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left">

                        <!--ImageView
                            android:id="@+id/img_pin"
                            android:layout_width="@dimen/icon_info_width"
                            android:layout_height="@dimen/icon_info_width"
                            android:layout_gravity="right"
                            android:src="@drawable/icon_description"
                            android:textColor="@color/colorPrimaryDark" /-->

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingTop="3dp"
                            android:text="@string/group_legend"
                            android:textColor="@color/primary_text_default_material_light"
                            android:textSize="@dimen/abc_text_size_subhead_material" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/text_legend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/cardview_default_elevation"
                card_view:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left">

                        <!--ImageView
                            android:id="@+id/img_disease"
                            android:layout_width="@dimen/icon_info_width"
                            android:layout_height="@dimen/icon_info_width"
                            android:layout_gravity="right"
                            android:src="@drawable/icon_description"
                            android:textColor="@color/colorPrimaryDark" /-->

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingTop="3dp"
                            android:text="@string/group_information"
                            android:textColor="@color/primary_text_default_material_light"
                            android:textSize="@dimen/abc_text_size_subhead_material" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/text_information"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="vertical"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/cardview_default_elevation"
                card_view:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left">

                        <!--ImageView
                            android:id="@+id/img_medicament"
                            android:layout_width="@dimen/icon_info_width"
                            android:layout_height="@dimen/icon_info_width"
                            android:layout_gravity="right"
                            android:src="@drawable/icon_description"
                            android:textColor="@color/colorPrimaryDark" /-->

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp"
                            android:paddingTop="3dp"
                            android:text="@string/group_about"
                            android:textColor="@color/primary_text_default_material_light"
                            android:textSize="@dimen/abc_text_size_subhead_material" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/text_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
